<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/forgot_password_fragment"
    android:background="@drawable/_bg__forgot_password_ek2_shape">

    <TextView
        android:layout_width="268.5dp"
        android:layout_height="57.5dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="73dp"
        android:text="@string/sign_up_or_login_to_your_account_string"
        android:textColor="@color/sign_up_or_login_to_your_account_color"
        android:textSize="17sp" />

    <TextView
        android:layout_width="192.5dp"
        android:layout_height="34.5dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="329dp"
        android:text="@string/email_address_string"
        android:textColor="@color/sign_up_or_login_to_your_account_color"
        android:textSize="17sp" />

    <TextView
        android:layout_width="326dp"
        android:layout_height="50dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/agbalumo"
        android:text="@string/welcome_redflat__string"
        android:textColor="@color/welcome_redflat__color"
        android:textSize="36sp" />

    <View
        android:layout_width="375dp"
        android:layout_height="85dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="154dp"
        android:background="@drawable/rectangle_1210_shape" />

    <View
        android:id="@+id/login"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="177dp"
        android:background="@drawable/rectangle_1211_shape" />

    <View
        android:id="@+id/signup"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="222dp"
        android:layout_marginTop="177dp"
        android:background="@drawable/rectangle_1212_shape" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginStart="47dp"
        android:layout_marginTop="177dp"
        android:gravity="center"
        android:text="@string/login_string"
        android:textColor="@color/login_color"
        android:textSize="17sp" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginStart="222dp"
        android:layout_marginTop="177dp"
        android:gravity="center"
        android:text="@string/sign_up_string"
        android:textColor="@color/login_color"
        android:textSize="17sp" />

    <View
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="376dp"
        android:background="@drawable/rectangle_1210_ek1_shape" />

    <EditText
        android:id="@+id/enter_email"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="376dp"
        android:hint="@string/enter_your_email_string"
        android:textColor="@color/enter_your_email_color"
        android:textSize="17sp" />

    <View
        android:id="@+id/send"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="455dp"
        android:background="@drawable/rectangle_1210_ek2_shape" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="455dp"
        android:gravity="center"
        android:text="@string/send_string"
        android:textColor="@color/login_color"
        android:textSize="18sp"
        android:textStyle="italic" />

</RelativeLayout>