<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/_bg__login_ek2_shape" />

    <TextView
        android:layout_width="268.5dp"
        android:layout_height="30sp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="65dp"
        android:text="@string/sign_up_or_login_to_your_account_string"
        android:textColor="@color/sign_up_or_login_to_your_account_color"
        android:textSize="17sp" />

    <TextView
        android:layout_width="192.5dp"
        android:layout_height="34.5dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="221dp"
        android:text="@string/email_address_string"
        android:textColor="@color/sign_up_or_login_to_your_account_color"
        android:textSize="17sp" />

    <TextView
        android:layout_width="192.5dp"
        android:layout_height="34.5dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="332dp"
        android:text="@string/password_string"
        android:textColor="@color/sign_up_or_login_to_your_account_color"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/forgot_password_"
        android:layout_width="154dp"
        android:layout_height="34.5dp"
        android:layout_gravity="center_vertical|end"
        android:layout_marginLeft="226dp"
        android:layout_marginTop="444dp"
        android:gravity="end"
        android:clickable="true"
        android:text="@string/forgot_password__string"
        android:textColor="@color/sign_up_or_login_to_your_account_color"
        android:textSize="17sp" />

    <TextView
        android:layout_width="142.5dp"
        android:layout_height="34.5dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="486dp"
        android:text="@string/or_login_using__string"
        android:textColor="@color/sign_up_or_login_to_your_account_color"
        android:textSize="17sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="157dp"
        android:layout_marginTop="490dp"
        android:contentDescription="vector_4"
        android:src="@drawable/vector_4" />

    <TextView
        android:layout_width="326dp"
        android:layout_height="50dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/agbalumo"
        android:text="@string/welcome_redflat__string"
        android:textColor="@color/welcome_redflat__color"
        android:textSize="36sp" />

    <View
        android:id="@+id/rectangle_1204"
        android:layout_width="375dp"
        android:layout_height="85dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/rectangle_1204_shape" />

    <View
        android:id="@+id/btn_choose_login"
        android:layout_width="141dp"
        android:layout_height="39dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="139dp"
        android:background="@drawable/rectangle_1205_shape" />

    <View
        android:id="@+id/btn_choose_register"
        android:layout_width="141dp"
        android:layout_height="39dp"
        android:layout_marginStart="221dp"
        android:layout_marginTop="139dp"
        android:background="@drawable/rectangle_1206_shape" />

    <TextView
        android:id="@+id/login_ek3"
        android:layout_width="57dp"
        android:layout_height="34.5dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="141dp"
        android:gravity="center"
        android:text="@string/login_ek3_string"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="73dp"
        android:layout_height="34.5dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginLeft="256dp"
        android:layout_marginTop="141dp"
        android:gravity="center"
        android:text="@string/sign_up_string"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <View
        android:id="@+id/rectangle_1207"
        android:layout_width="348dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="258dp"
        android:background="@drawable/rectangle_1207_shape" />

    <View
        android:id="@+id/rectangle_1208"
        android:layout_width="348dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="369dp"
        android:background="@drawable/rectangle_1208_shape" />

    <EditText
        android:id="@+id/password"
        android:layout_width="324dp"
        android:layout_height="45dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="377dp"
        android:hint="@string/enter_your_password_string"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="324dp"
        android:layout_height="45dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="266dp"
        android:hint="@string/enter_your_email_string"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <ImageView
        android:id="@+id/google"
        android:layout_width="75.35dp"
        android:layout_height="71dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="537dp"
        android:contentDescription="google_1"
        android:clickable="true"
        android:src="@drawable/google_2" />

    <View
        android:id="@+id/enterBtn"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="721dp"
        android:background="@drawable/rectangle_1209_shape"
        android:clickable="true" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="721dp"
        android:gravity="center"
        android:text="@string/login_ek4_string"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="71dp"
        android:layout_height="71dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="537dp"
        android:clickable="true"
        android:contentDescription="fb_1"
        android:src="@drawable/fb_2" />

    <ImageView
        android:id="@+id/twitter"
        android:layout_width="71dp"
        android:layout_height="71dp"
        android:layout_marginStart="202dp"
        android:layout_marginTop="537dp"
        android:clickable="true"
        android:contentDescription="twitter_1"
        android:src="@drawable/twitter_2" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="640dp"
        android:layout_marginStart="180dp"
        android:visibility="gone"/>
</RelativeLayout>